Fix scrollbar color

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,7 @@ h1 {
     $pattern-color-2: white;
     width: 100vw;
     overflow: scroll;
+    scrollbar-color: pink gray;
     position: relative;
     max-width: 500px;
     background-image:
